--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.5.4",
     "next": "14.2.8",
     "react": "^18",
