--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.13.0",
     "@emotion/react": "^11.14.0",
+    "dotenv": "^17.2.0",
     "leaflet": "^1.9.4",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
