--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.13.0",
     "@emotion/react": "^11.14.0",
+    "@hookform/resolvers": "^5.2.2",
     "dotenv": "^17.2.0",
     "leaflet": "^1.9.4",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.2.5"
+    "swiper": "^11.2.5",
+    "zod": "^4.1.11"
   }
 }
